--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   },
   "devDependencies": {
     "jest": "^21.0.1"
+  },
+  "jest": {
+    "coverageDirectory": "coverage",
+    "coverageReporters": [ "lcov" ]
   }
 }
